Fixed image cropping

--- a/style/style.css
+++ b/style/style.css
@@ -113,6 +113,13 @@ li {
     overflow: hidden;
     border-radius: 50%;
     margin-left: 15em;
+    width: 150px;
+    height: 150px;
+}
+
+.image-circle img {
+    width: 100%;
+    height: auto;
 }
 
 table {
